[package]
name = "uff_cli"
description = "untitled fuzzel frontend"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gingeh/uff"

[[bin]]
name = "uff"
path = "src/main.rs"

[dependencies]
bitcode = "0.6.6"
colog = "1.3.0"
kdl = "6.3.4"
log = "0.4.27"
miette = { version = "7.6.0", features = ["fancy"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
walkdir = "2.5.0"
